--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "start": "ts-node src/server.ts ",
     "start:dev": "nodemon  --exec ts-node src/server.ts ",
-    "build" :"tsc ",
+    "build": "tsc ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "MIT",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "moment": "^2.30.1"
   },
   "devDependencies": {
